--- a/trilce-app/src/main/resources/application.properties
+++ b/trilce-app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=trilce-app
 server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/trilce_db
-spring.datasource.username=equipoti-dab
+spring.datasource.username=equipoti-dba
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.postgresql.Driver
 
