feat: update application.properties and add vscode config

--- a/trilce-app/src/main/resources/application.properties
+++ b/trilce-app/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=equipoti-dba
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
